// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendButton should change theme backgroundColor to 0.3 opacity 1`] = `
<View
  style={
    Object {
      "justifyContent": "flex-end",
      "paddingHorizontal": 5,
      "paddingVertical": 2,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#166de0",
          "borderRadius": 4,
          "height": 28,
          "justifyContent": "center",
          "paddingLeft": 3,
          "width": 72,
        },
        Object {
          "backgroundColor": "rgba(22,109,224,0.3)",
        },
      ]
    }
  >
    <PaperPlane
      color="#ffffff"
      height={13}
      width={15}
    />
  </View>
</View>
`;

exports[`SendButton should match snapshot 1`] = `
<TouchableWithFeedbackIOS
  onPress={[MockFunction]}
  style={
    Object {
      "justifyContent": "flex-end",
      "paddingHorizontal": 5,
      "paddingVertical": 2,
    }
  }
  type="opacity"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#166de0",
        "borderRadius": 4,
        "height": 28,
        "justifyContent": "center",
        "paddingLeft": 3,
        "width": 72,
      }
    }
  >
    <PaperPlane
      color="#ffffff"
      height={13}
      width={15}
    />
  </View>
</TouchableWithFeedbackIOS>
`;

exports[`SendButton should render theme backgroundColor 1`] = `
<TouchableWithFeedbackIOS
  onPress={[MockFunction]}
  style={
    Object {
      "justifyContent": "flex-end",
      "paddingHorizontal": 5,
      "paddingVertical": 2,
    }
  }
  type="opacity"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#166de0",
        "borderRadius": 4,
        "height": 28,
        "justifyContent": "center",
        "paddingLeft": 3,
        "width": 72,
      }
    }
  >
    <PaperPlane
      color="#ffffff"
      height={13}
      width={15}
    />
  </View>
</TouchableWithFeedbackIOS>
`;
